# verifyOS

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release-plz.toml  verifyos.example.toml
.agent/workflows/: backend.md  ci.md  extension.md  frontend.md
.github/workflows/: release-plz.yml  rust.yml  security.yml  voc-analysis.yml
apps/backend/: Cargo.toml  README.md
apps/backend/infra/: README.md  variables.tf
apps/backend/src/: main.rs
apps/backend/src/app/: mod.rs  rate_limit.rs  scan.rs  state.rs
apps/backend/src/domain/: mod.rs
apps/backend/src/infra/: telemetry.rs
apps/backend/src/infra/http/: handlers.rs  router.rs
apps/cli/: README.md
apps/frontend/: README.md  package-lock.json  package.json
docs/: ARCHITECTURE.md  STRUCTURE.md
editors/vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
examples/: bad_app.ipa  good_app.ipa
examples/AppStoreMock/: README.md
src/: agent_assets.rs  agent_io.rs  agents.rs  ci_comment.rs  config.rs  doctor.rs  lib.rs  main.rs  profiles.rs  size_analysis.rs
src/commands/: analyze_size.rs  doctor.rs  handoff.rs  init.rs  lsp.rs  mod.rs  scan.rs  summary.rs  support.rs
src/core/: engine.rs
src/parsers/: bundle_scanner.rs  macho_scanner.rs  mod.rs  plist_reader.rs  provisioning_profile.rs  xcode_parser.rs  xcworkspace_parser.rs  zip_extractor.rs
src/report/: data.rs  mod.rs  renderers.rs
src/rules/: ats.rs  bitcode.rs  core.rs  (+10 more)
tests/: cli_test.rs  config_test.rs  editor_contract_test.rs  report_test.rs  rules_test.rs  workflow_contract_test.rs
(+13 files in other folders)
