[package]
name = "verifyos-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "0.6"

verifyos-cli = { path = "../../" }
